Update media manager
